# wp-resurrect

./: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  README.adoc  ROADMAP.adoc  STATE.scm  guix.scm  justfile
.github/workflows/: codeql.yml  guix-nix-policy.yml  jekyll-gh-pages.yml  jekyll.yml  mirror.yml  quality.yml  rsr-antipattern.yml  scorecard.yml  security-policy.yml  wellknown-enforcement.yml  workflow-linter.yml
.well-known/: ai.txt  humans.txt  security.txt
config/includes/: security-headers-strict.ncl
config/schema/: cache.ncl  database.ncl  dns.ncl  php.ncl  security.ncl  site.ncl  webserver.ncl  wordpress.ncl
config/sites/: example.ncl
docs/: ARCHITECTURE.adoc
salt/states/socp/: init.sls
salt/states/socp/dns/: init.sls
salt/states/socp/security/: init.sls
salt/states/socp/webserver/: init.sls  nginx.sls
salt/states/socp/wordpress/: init.sls
sdp/: ipv6-firewall.nft
sdp/ziti/: controller.yaml  router.yaml
src/socp-tui/: Cargo.toml
src/socp-tui/src/: api.rs  app.rs  config.rs  events.rs  main.rs  ui.rs
state/: ECOSYSTEM.scm  STATE.scm
state/lib/: state-utils.scm
